--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-This is a Hunspell dictionary package intended use with for OpenOffice.org. It open source and distributed under the LGPL.
+This is a Hunspell dictionary package intended use with for OpenOffice.org.
+IT IS NOT INTENDED FOR PRODUCTION USE AND IS FOR DEVELOPMENT OR EXPERIMENTAL PURPOSES ONLY.
+
+The package is open source and distributed under the LGPL.
 
 Please read licence.en.txt for incensing info.
 
