--- a/README
+++ b/README
@@ -1,8 +1,15 @@
-This is a Hunspell dictionary package intended use with for OpenOffice.org.
-IT IS NOT INTENDED FOR PRODUCTION USE AND IS FOR DEVELOPMENT OR EXPERIMENTAL PURPOSES ONLY.
-
-The package is open source and distributed under the LGPL.
-
-Please read licence.en.txt for incensing info.
-
+Icelandic dictionary for OpenOffice.org
 Copyright (C) 2010 Stefán Vignir Skarphéðinsson
+
+This extension is free software: you can redistribute it and/or
+modify it under the terms of the GNU Lesser General Public
+License as published by the Free Software Foundation, either
+version 3 of the License, or (at your option) any later version.
+
+This extension is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with this library.  If not, see http://www.gnu.org/licenses/.
